2010-11-13  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* configure.ac: Bump version to 0.47.

2010-07-23  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* configure.ac: Bump version to 0.46.

2010-03-29  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* configure.ac: Bump to 0.45.

2009-09-22  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* configure.ac: Bump to 0.44.

2008-05-23  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* configure.ac: Bump to 0.40.

2005-04-04  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* configure.ac (ipr_top_builddir): Remove.
	(ipr_srcdir): Likewise.
	Require Autoconf 2.52 or higher.
	Bump version to 0.36.
	Include "foreign" Automake's options.

2005-03-23  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* configure.ac: Bump version to 0.35.
	(ipr_top_builddir): New.
	(ipr_srcdir): Remove.

2005-03-02  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* Mark for 0.34.

	* configure.ac: Bump version.

2005-02-06  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* Mark for 0.33
	* configure.ac: Bump version.
	* configure: Regenrate.

2005-02-03  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* configure.ac: Bump version.
	* configure: Regenerate.

2005-02-01  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* Mark for 0.31.

	* configure.ac: Bump version.
	* configure: Regenerate.

2005-01-31  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* Mark for 0.30.

	* configure: Regenrate.
	* configure.ac: Bump version.

2005-01-27  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* Mark for 0.29
	* configure.ac: Bump version.

2005-01-10  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* configure.ac: AC_OUTPUT doc/Makefile too.

2005-01-10  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* Mark for 0.28
	
2005-01-10  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* configure.ac: AC_OUTPUT include/Makefile
	* configure: Regenerate.

	* Makefile.am (SUBDIRS): Add include.
	* Makefile.in: Regenerate.
	* libtool: New.

2005-01-09  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	Enable autoconf/automake support.
	* aclocal.m4: New.
	* config.guess: Likewise.
	* config.sub: Likewise.