@@ -40,5 +40,4 @@
 
 %%% Local Variables: 
 %%% mode: latex
-%%% TeX-master: t
 %%% End: 
