@@ -1,10 +1,10 @@
-\documentclass[a4paper,12pt]{article}
+\documentclass[letter,11pt]{article}
 \usepackage[latin1]{inputenc}
 \usepackage[T1]{fontenc}
-\usepackage{dsfont, mathrsfs}
+\usepackage{mathrsfs}
 %\usepackage{lucidabr}
 %\usepackage{yhmath}
-\usepackage{palatino}
+%\usepackage{palatino}
 \usepackage{amsmath,amssymb}
 %\usepackage{graphics, psfig}
 \usepackage[all]{xy}
