@@ -1,3 +1,9 @@
+2019-06-26  Gabriel Dos Reis  <gdr@axiomatics.org>
+
+	* configure.ac: Check for pdflatex.
+	Regenate build description.
+	* CMakeLists.txt: Fix typo.
+
 2010-11-13  Gabriel Dos Reis  <gdr@cs.tamu.edu>
 
 	* configure.ac: Bump version to 0.47.
